# fract4d-gnofract4d

./: .gitignore  AUTHORS  COPYING  CVS_IS_DEAD_USE_GIT  ChangeLog  INSTALL  MANIFEST.in  Makefile  Makefile.am  Makefile.in  PKG-INFO  README  Todo  acconfig.h  aclocal.m4  autogen.sh  benchfct.py  benchmark.py  config.cache  config.h  config.h.in  config.status  configure  configure.in  createdocs.py  gnofract.spec  gnofract4d  gnofract4d-mandrake.spec  gnofract4d-mime.xml  gnofract4d.desktop  gnofract4d.spec  makedeb.sh  mkall.sh  mkboth.sh  mkdeb.sh  mkinstalldirs  mkiso.sh  mkrpm.sh  my_bdist_rpm.py  my_build_ext.py  (+5 more)
buildtools/: createdocs.py  my_bdist_rpm.py  my_build_ext.py
debian/: changelog  control  gnofract4d.install  gnofract4d.manpages
debian-custom/: README.Debian  changelog  control  copyright  rules
doc/: Makefile.am  docbook.css  gnofract4d-doc.css  gnofract4d.sgml  gnofract4d.xsl
doc/gnofract4d-manual/C/: Makefile.am  commands.xml  gnofract4d-manual-C.omf  gnofract4d-manual.html  gnofract4d-manual.xml  gnofract4d.xsl  stdlib.xml
elephant-valley/: dev.cfg  devdata.sqlite  sample-prod.cfg  setup.py  start-elephant_valley.py
fract4d/: .gitignore  Makefile.am  absyn.py  animation.py  browser_model.py  cache.py  canon.py  checkalloc.py  codegen.py  colorizer.py  colormap.py  createdocs.py  directorbean.py  fc.py  fctutils.py  formdb.py  formsettings.py  fractal.py  fractconfig.py  fractlexer.py  fractmain.py  fractparser.py  fracttypes.py  frm_docbook.kid  fsymbol.py  gf4d.cfrm  gf4d.frm  gradient.py  graph.py  image.cpp  image.h  image.py  instructions.py  ir.py  keyframe.py  lex.py  main.cpp  messages.py  optimize.py  options.py  (+44 more)
fract4d/c/: .gitignore  MTFractWorker.cpp  STFractWorker.cpp  cmap.c  cmap.cpp  cmap.h  fate.h  fract4dmodule.cpp  fractFunc.cpp  fractFunc.h  fractWorker.h  fractWorker_public.h  fract_public.h  fract_stdlib.cpp  fract_stdlib.h  image.cpp  image.h  imageWriter.cpp  image_public.h  pf.h  pointFunc.cpp  pointFunc_public.h  stats.h  threadpool.h  vectors.h
fract4dgui/: AVIGen.py  DirectorBean.py  DlgAdvOpt.py  FCTGen.py  PNGGen.py  __init__.py  angle.py  autozoom.py  browser.py  colors.py  createdocs.py  dialog.py  director.py  director_prefs.py  flickr_assistant.py  fourway.py  gradientCellRenderer.py  gtkfractal.py  gtkgradient.py  hig.py  icons.py  main_window.py  model.py  painter.py  preferences.py  renderqueue.py  settings.py  speed.txt  table.py  test.py  test_browser.py  test_colors.py  test_director.py  test_fract4dguic.py  test_gtk.py  test_gtkfractal.py  test_gtkgradient.py  test_hig.py  test_main_window.py  test_model.py  (+10 more)
fractutils/: flickr.py  get.py  makemap.py  slave.py  test.py  test_flickr.py  test_makemap.py  test_slave.py
gui/: autozoom.py  browser.py  colors.py  gnofract4d  gtkfractal.py  model.py  preferences.py  settings.py  setup.py  test.py  test_gtkfractal.py  test_model.py  test_preferences.py  test_undo.py  undo.py
intl/: Makefile
libfract4d/: MTFractWorker.cpp  Makefile.am  bailFunc.cpp  bailFunc.h  calc.h  colorFunc.cpp  colorFunc.h  colorTransferFunc.cpp  colorTransferFunc.h  colorizer.cpp  compiler.cpp  compiler.h  compiler_template.cpp  fract.cpp  fract.h  fract4d.h  fractFunc.cpp  fractFunc.h  fractThreadFunc.cpp  fractWorker.h  fract_callbacks.h  fract_public.h  image.cpp  image.h  image_public.h  io.cpp  io.h  iterFunc.cpp  iterFunc.h  pointFunc.cpp  pointFunc.h  pointFunc_public.h  state.h  test.cpp  test_parfile.py  threadpool.h  vectors.h
libfract4d/compiler/: MTFractWorker.cpp  STFractWorker.cpp  TODO  absyn.py  browser.py  canon.py  cmap.c  cmap.h  codegen.py  colormap.py  fc  fc.py  fcp.grammar  fcp.rb  fctfile.py  fract4dmodule.c  fract4dmodule.cpp  fractFunc.cpp  fractFunc.h  fractWorker.h  fractWorker_public.h  fract_public.h  fractal.py  fractlexer.py  fractparser.py  fracttypes.py  gf4d.cfrm  gf4d.frm  image.cpp  image.h  image_public.h  ir.py  lex.py  parfile.py  pf.h  pfmodule.c  pointFunc.cpp  pointFunc_public.h  protogui.py  settings.py  (+21 more)
macros/: Makefile  Makefile.in
params/: Background.fct  CrackingUp.fct  Cubic_Connectedness_Locus_.fct  Dipole.fct  EvenOddAbs.fct  Fanaticism Leotard.fct  Gravitybrot.fct  HoseSpiceRingElephantShop.fct  HoseSpiceRingElephantShop002.fct  ManZPower.fct  MandAutoCritInZ.fct  Mandelbrot001.fct  Mandelbrot002.fct  Monopole.fct  NatureMort.fct  NewtBasin.fct  Piranesi.fct  Riverrun.fct  Swanson.fct  T02-01-experiment-abs.fct  T02-01-experiment-abs002.fct  abyss.fct  abyssal_2.fct  accelerator.fct  agirltobefound.fct  alhambra.fct  amplitude.fct  arcane.fct  arpeggio.fct  asic.fct  azathoth.fct  balefire.fct  bestoffer.fct  biohazard.fct  blackheart.fct  blackheart2.fct  blade.fct  blade_000.fct  blasted.fct  blob.fct  (+261 more)
pixmaps/: Makefile.am
po/: ChangeLog  Makefile  Makefile.in  POTFILES  POTFILES.in  cat-id-tbl.c  fr.gmo  fr.po  gnofract.pot  it.po  translate.py
scripts/: guest_cmd.py  mkall.sh  mkdist.py  mkiso.sh  vmrunner.py
src/: Makefile  Makefile.am  Makefile.in  angles.cpp  angles.h  bailFunc.cpp  bailFunc.h  calc.cpp  calc.h  callbacks.c  callbacks.cpp  callbacks.h  cmapbrowser.cpp  cmapbrowser.h  colorFunc.cpp  colorFunc.cpp~  colorFunc.h  colorFunc.h~  colorfunc.h  colorizer.cpp  colorizer.h  colorizer_public.h  compiler.cpp  compiler.h  compiler_template.cpp  drawingareas.cpp  drawingareas.h  fract.cpp  fract.h  fractFunc.cpp  fractFunc.h  fractThreadFunc.cpp  fract_callbacks.h  fract_public.h  gf4d_angle.c  gf4d_angle.cpp  gf4d_angle.h  gf4d_fourway.cpp  gf4d_fourway.h  gf4d_fractal.c  (+55 more)
src/.deps/: calc.P  callbacks.P  interface.P  main.P  support.P  test-fonction.P
src/paramfiles/: aa_different_bug.fct  deepen_bug.fct  param.fct  tower_of_cubics.fct  weird_possible_error.fct  wickerman.fct
testdata/: animation.fcta  chainsoflight.fct  nexus.fct  param.fct  std.fct  test_bail.fct  trigcentric.fct  valley_test.fct  zpower.fct
utils/: flickr.py  makemap.py  test.py  test_flickr.py  test_makemap.py
win32/: FractCtl.cpp  FractCtl.def  FractCtl.dsp  FractCtl.dsw  FractCtl.idl  FractCtl.rc  FractCtlps.def  FractCtlps.mk  (+11 more)
(+12 files in other folders)
