## Process this file with automake to produce Makefile.in

SUBDIRS = po libfract4d src doc pixmaps maps

EXTRA_DIST = config.rpath  \
	gnofract4d.spec\
	gnofract4d.desktop \
	intltool-extract.in	\
	intltool-merge.in	\
	intltool-update.in

DISTCLEANFILES = \
	intltool-extract	\
	intltool-merge		\
	intltool-update


Graphicsdir= $(datadir)/gnome/apps/Graphics
Graphics_DATA=gnofract4d.desktop

