dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AC_PREFIX_DEFAULT(/usr)
AM_INIT_AUTOMAKE(gnofract4d, 1.7)
AM_CONFIG_HEADER(config.h)

dnl Pick up the Gnome macros.
AM_ACLOCAL_INCLUDE(macros)

GNOME_INIT
AC_ISC_POSIX
AC_PROG_CC
AC_PROG_CXX
AM_PROG_CC_STDC
AC_HEADER_STDC

GNOME_COMPILE_WARNINGS
GNOME_X_CHECKS

AM_PATH_GTK(1.2.0, , AC_MSG_ERROR("cannot find gtk"), gthread)

dnl look for gmp 
dnl AC_MSG_CHECKING(for GMP arbitrary-precision math library)
dnl AC_TRY_CPP(gmp.h,AC_DEFINE(HAVE_GMP) LIBS="$LIBS -lgmp")

dnl Add the languages which your application supports here.
AM_GNU_GETTEXT([external])

dnl Set PACKAGE_LOCALE_DIR in config.h.
if test "x${prefix}" = "xNONE"; then
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${ac_default_prefix}/${DATADIRNAME}/locale")
  real_prefix="${ac_default_prefix}"
else
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${prefix}/${DATADIRNAME}/locale")
  real_prefix="${prefix}"
fi

dnl Subst PACKAGE_PIXMAPS_DIR.
PACKAGE_PIXMAPS_DIR="`gnome-config --datadir`/pixmaps/${PACKAGE}"
AC_SUBST(PACKAGE_PIXMAPS_DIR)

dnl Subst MAPS_DIR
PACKAGE_MAPS_DIR="`gnome-config --datadir`/maps/${PACKAGE}"
AC_SUBST(PACKAGE_MAPS_DIR)

AC_OUTPUT([ m4/Makefile 
Makefile
macros/Makefile
src/Makefile
po/Makefile.in
doc/Makefile
])

