dnl Process this file with autoconf to produce a configure script.

AC_INIT([gnofract4d],[1.8])
AC_CONFIG_SRCDIR(libfract4d/fract4d.h)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE
AC_PREFIX_DEFAULT(/usr)
dnl AC_MAINTAINER_MODE

AM_PROG_LIBTOOL

AC_ISC_POSIX
AC_PROG_CC
AC_PROG_CXX
AM_PROG_CC_STDC
AC_HEADER_STDC

dnl libs required by libfract4d
AC_CHECK_LIB(pthread,pthread_join)
AC_CHECK_LIB(dl,dlopen)

pkg_modules="libgnomeui-2.0"
PKG_CHECK_MODULES(GNOFRACT4D, [$pkg_modules])
AC_SUBST(GNOFRACT4D_CFLAGS)
AC_SUBST(GNOFRACT4D_LIBS)

GETTEXT_PACKAGE=gnofract4d
AC_DEFINE(GETTEXT_PACKAGE, "gnofract4d", "womble")
dnl AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE")
dnl AC_SUBST(GETTEXT_PACKAGE)

dnl Add the languages which your application supports here.
ALL_LINGUAS=""
AM_GLIB_GNU_GETTEXT

dnl look for gmp 
dnl AC_MSG_CHECKING(for GMP arbitrary-precision math library)
dnl AC_TRY_CPP(gmp.h,AC_DEFINE(HAVE_GMP) LIBS="$LIBS -lgmp")


dnl Subst PACKAGE_PIXMAPS_DIR.
PACKAGE_PIXMAPS_DIR="`gnome-config --datadir`/pixmaps/${PACKAGE}"
AC_SUBST(PACKAGE_PIXMAPS_DIR)

dnl Subst MAPS_DIR
PACKAGE_MAPS_DIR="`gnome-config --datadir`/maps/${PACKAGE}"
AC_SUBST(PACKAGE_MAPS_DIR)

dnl find marshaller generator path
GLIB_GENMARSHAL="`pkg-config --variable=glib_genmarshal glib-2.0`"
AC_SUBST(GLIB_GENMARSHAL)

AC_CONFIG_FILES([ 
Makefile
libfract4d/Makefile
fract4d/Makefile
src/Makefile
po/Makefile.in
doc/Makefile
doc/gnofract4d-manual/Makefile
doc/gnofract4d-manual/C/Makefile
pixmaps/Makefile
maps/Makefile
])
AC_OUTPUT

